--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1>Welcome to fposindia.in!</h1>
-        <p>The HTTP Server is working!</p>
+        <p>The Webpage is working! Welcome Ranga, Sourav & Sangram</p>
+		<p><img src="fpo.jpg" alt="parakeet"></p>
     </body>
 </html>
