--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
     <head>
-        <title>Python is awesome!</title>
+        <title>Hello All!</title>
     </head>
     <body>
         <h1>Welcome to fposindia.in!</h1>
-        <p>The Webpage is working! Welcome Ranga, Sourav & Sangram</p>
-		<p><img src="fpo.jpg" alt="parakeet"></p>
+		<b>&#128525;&#128525;&#128525;</b>
+        <p>The Webpage is working! Welcome <b>Ranga, Sourav & Sangram</b></p>
+		<p1 style="font-size:48px">
+		&#128512; &#128516; &#128525; &#128151;
+		</p1>
+		<p2><img src="fpo.jpg" alt="parakeet"></p2>
     </body>
 </html>
